--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -57,6 +57,7 @@
           gtag('js', new Date());
 
           gtag('config', 'UA-57123259-1');
+          gtag('config', 'AW-963077797');
         </script>
 
         <script type="application/ld+json">
@@ -71,9 +72,8 @@
             }
             </script>
 
-
-
         {% block canonical %}{% endblock %}
+        {% block heading %}{% endblock %}
     </head>
 
     <body>
