--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -6,6 +6,12 @@
 	<meta name="description" content="Une question ? Un projet à proposer ? Besoin d'un devis pour une animation musicale ? Contactez moi !">
 {% endblock %}
 
+{% block heading %}<!-- Event snippet for prise de contact conversion page -->
+<script>
+  gtag('event', 'conversion', {'send_to': 'AW-963077797/BLgUCM3rwasBEKXNncsD'});
+</script>
+{% endblock %}
+
 {% block body %}
 	<section class="flash flash--limited">
 		<div class="flash-item">
