--- a/templates/geo/77.html.twig
+++ b/templates/geo/77.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-    Accordéoniste professionnel | Seine-et-Marne (77) | Jérémy DUTHEIL
+    Accordéoniste professionnel en Seine-et-Marne (77) | Jérémy DUTHEIL
 {% endblock %}
 
 {% block metadesc %}
@@ -26,13 +26,13 @@
 			<div class="row">
 				<div class="col-sm-12">
                     <p>
-                        Vous cherchez un accordéoniste en Seine-et-Marne (77), par exemple à <a href="{{ path('melun') }}">Melun</a>, <a href="{{ path('fontainebleau') }}">Fontainebleau</a> ou <a href="{{ path('meaux') }}">Meaux</a> ?
+                        Vous cherchez un accordéoniste en Seine-et-Marne (77), par exemple à Melun, Fontainebleau ou Meaux ?
                     </p>
                 </div>
             </div>
 
             <p>
-				Jérémy DUTHEIL vous propose avec son accordéon des formules sur mesures pour <strong>l'animation musicale</strong> de votre cocktail, fête ou soirée d'entreprise ; seul ou accompagné d'autres <strong>musiciens</strong>, dans un style plutôt moderne ou <strong>rétro</strong>, il saura combler vos invités en s'adaptant à leurs envies (et les votres !). Musicien professionnel avec de l'expérience, le répertoire proposé est varié et personnalisé pour votre événement.
+				Jérémy Dutheil vous propose avec son accordéon des formules sur mesures pour <strong><a href="{{ path('animations') }}">l'animation musicale</a></strong> de votre cocktail, fête ou soirée d'entreprise ; seul ou accompagné d'autres <strong><a href="{{ path('musiciens_soirees') }}">musiciens</a></strong>, dans un style plutôt moderne ou <strong>rétro</strong>, il saura combler vos invités en s'adaptant à leurs envies (et les votres !). Musicien professionnel avec de l'expérience, le répertoire proposé est varié et personnalisé pour votre événement.
 			</p>
 
 			<p>
@@ -127,7 +127,7 @@
 				</li>
 
 				<li>
-					<strong>Trio accordéon / guitare / contrebasse ou accordéon / 2 guitares</strong> : les grands classiques du <strong>jazz manouche</strong> !
+					<strong>Trio accordéon / guitare / contrebasse ou accordéon / 2 guitares</strong> : les grands classiques du <strong><a href="{{ path('manouche') }}">jazz manouche</a></strong> !
 				</li>
 
 				<li>
