--- a/templates/pages/manouche.html.twig
+++ b/templates/pages/manouche.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-	Groupe jazz manouche pour vos événements | Mariage, Soirée, Cocktail
+	Groupe de jazz manouche pour vos événements - Mariage, Soirée, Cocktail
 {% endblock %}
 
 {% block metadesc %}
-	<meta name="description" content="Vous cherchez un groupe de jazz manouche professionnel pour votre événement (mariage, soirée privée, cocktail d'entreprise) ? Découvrez nos formules !">
+	<meta name="description" content="Groupe de jazz manouche professionnel pour vos événements : soirée, cocktail, mariage. Du duo au quartet !">
 {% endblock %}
 
 {% block body %}
