--- a/templates/pages/mentions.html.twig
+++ b/templates/pages/mentions.html.twig
@@ -4,6 +4,7 @@
 
 {% block metadesc %}
     <meta name="description" content="Informations légales concernant le site https://www.jeremy-dutheil.fr">
+    <meta name="robots" content="noindex">
 {% endblock %}
 
 {% block body %}
