--- a/templates/pages/musiciens_soirees.html.twig
+++ b/templates/pages/musiciens_soirees.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-	Musiciens pour soirées - Orchestre sur mesure - France entière
+	Musiciens pour votre soirée privée - Orchestre sur mesure
 {% endblock %}
 
 {% block metadesc %}
-	<meta name="description" content="Vous cherchez des musiciens pour animer votre mariage, soirée, cocktail ? Jazz manouche, chanson, ... notre orchestre se déplace dans toute la France !">
+	<meta name="description" content="Vous cherchez des musiciens pour animer votre mariage, soirée, cocktail ? Jazz manouche, chanson, ... déplacements dans toute la France !">
 {% endblock %}
 
 {% block body %}
@@ -19,10 +19,10 @@
 
 	<section class="content-section bg--blank page-section">
 		<div class="container">
-			<h1 class="section-title">Musiciens pour soirées</h1>
+			<h1 class="section-title">Musiciens pour soirées et événements</h1>
 
             <p>
-                Vous cherchez un groupe de musique pour prendre en charge l'<strong>animation musicale</strong> de votre cocktail, fête ou soirée d'entreprise ? Artistes professionnels, nous vous proposons des formules sur mesure en fonction de vos envies et votre budget ; complètement autonomes, nous gérons l'animation musicale de votre soirée de A à Z.
+                Vous cherchez un groupe de musique pour prendre en charge l'<strong>animation musicale</strong> de votre cocktail, fête ou soirée d'entreprise ? Artistes professionnels, nous vous proposons des formules sur mesure en fonction de vos envies et votre budget. Autonomes en matériel (une simple prise électrique nous suffit), vous n'avez plus qu'à apprécier la <strong>musique en live</strong>, avec de vrais musiciens sur scène !
             </p>
 
 			<p>
