--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -75,7 +75,7 @@
 						<h1 class="section-title">Accordéoniste à Paris</h2>
 
 						<p>
-							Jérémy Dutheil est un accordéoniste français complet abordant un large univers musical, original et résolument moderne. De la <em class="text-link">guinguette</em> au <em class="text-link">rock oriental</em>, en passant par la <em class="text-link">chanson française</em> ou encore le <em class="text-link">jazz et jazz manouche</em>, cet artiste polyvalent et passionné aime toucher à tous les styles.
+							Jérémy Dutheil est un accordéoniste français complet abordant un large univers musical, original et résolument moderne. De la <em class="text-link">guinguette</em> aux <em class="text-link">musiques du monde</em>, en passant par la <em class="text-link">chanson française</em> et le <em class="text-link">jazz manouche</em>, cet artiste polyvalent et passionné aime toucher à tous les styles.
 						</p>
 
 						<p>
@@ -117,7 +117,7 @@
 						<h2 class="section-title section-title--blank">Mariage, soirée, cocktail . . .</h2>
 
 						<p class="txt--blank">
-							L'accordéon, de par sa richesse et sa diversité musicales, se prête particulièrement bien au jeu de l'<strong>animation musicale</strong> ; fort d'une expérience certaine, je propose un répertoire varié qui plaira à tout type de public. Ici il ne s'agit pas d'un concert classique, mais de s'adapter en fonction de votre lieu et de vos attentes ; je peux aussi bien me faire discret et jouer des standards de jazz lors d'un repas en musique ou au vin d'honneur de <a href="{{ path('animations_mariages') }}">votre mariage</a>, mais également jouer du musette pour faire danser les seniors en début de soirée (ou pour un anniversaire, par exemple).
+							L'accordéon, de par sa richesse et sa diversité musicales, se prête particulièrement bien au jeu de l'<strong>animation musicale</strong>. Fort d'une expérience certaine, je propose un répertoire varié qui plaira à tout type de public, comme en attestent les nombreux avis positifs. Ici il ne s'agit pas d'un concert classique, mais de s'adapter en fonction de votre lieu et de l'ambiance attendue pour votre soirée. Seul ou accompagné (guitariste, contrebassiste, ...), je me plairai à jouer des standards de jazz et <a href="{{ path('manouche') }}">jazz manouche</a> lors d'un repas en musique ou au vin d'honneur de <a href="{{ path('animations_mariages') }}">votre mariage</a>. Très à la mode actuellement, je propose également des <a href="{{ path('guinguette') }}">soirées guinguettes</a> en solo ou avec chanteuse, autour de la chanson française d'époque.
 						</p>
 
 						<p class="txt--blank">
