--- a/templates/pages/manouche.html.twig
+++ b/templates/pages/manouche.html.twig
@@ -28,6 +28,10 @@
                 Vous recherchez un <strong>groupe de jazz manouche</strong> pour <a href="{{ path('groupe_jazz_manouche_mariage_paris') }}">votre mariage</a>, anniversaire, cocktail d'entreprise ou tout autre événement ? Vous avez fait le tour des sites qui proposent une <strong>recherche de musiciens</strong> et ne savez pas qui choisir ? Vous êtes au bon endroit ! <strong>Musiciens professionnels</strong> et expérimentés, nous vous proposons différentes formules (duo, trio, quartet, ...), toutes sur mesure, pour une animation musicale de qualité lors de votre événement.
 			</p>
 
+			<p>
+				Nous nous produisons aussi bien lors de concerts en public, que lors d'<strong>événements d'entreprise et soirées privées</strong> ; les vidéos que vous verrez ci-dessous sont captées pour la plupart lors de concerts, mais vous pouvez consulter <a href="#reviews">nos avis</a> qui eux parlent plutôt de nos animations musicales.
+			</p>
+
 			<div class="row">
 				<div class="col-md-6" style="margin-bottom: 15px;">
 					<div class="embed-responsive embed-responsive-16by9">
@@ -90,7 +94,7 @@
 				Vous avez forcément déjà entendu des morceaux comme <i>Minor Swing</i> ou <i>Les Yeux Noirs</i> ; intemporels, ils sont repris encore aujourd'hui dans presque tous les concerts de <strong>jazz manouche</strong>. Mais connaissez-vous des airs moins entendus, comme <i>Anniversary Song</i> ou <i>Lulu Swing</i> ? Notre répertoire balaie le style jazz manouche, des grands standards aux morceaux plus traditionnels et moins connus ; nous faisons également quelques incursions dans le jazz plus "classique", avec par exemple des reprises de Charlie Parker (<i>Billie's Bounce</i>, <i>Donna Lee</i>) ou Duke Ellington (<i>It don't mean a thing</i>, <i>Caravan</i>).
 			</p>
 
-			<h2 class="section-title section-title--small">Ils nous ont fait confiance</h2>
+			<h2 id="reviews" class="section-title section-title--small">Ils nous ont fait confiance</h2>
 
 			<div class="partners">
 				<img src="{{ asset('img/vinci.png') }}" alt="Vinci" style="max-height: 100px; margin-right: 25px;">
