--- a/templates/pages/guinguette.html.twig
+++ b/templates/pages/guinguette.html.twig
@@ -46,10 +46,14 @@
 					<p>
 						Pour votre <strong>soirée guinguette</strong>, je vous propose des animations seul à l'accordéon, ou bien accompagné d'une chanteuse. En duo <strong>accordéon / voix</strong>, nous proposons un répertoire qui balaie la chanson française des années 30 à aujourd'hui.
 					</p>
+
+					<p>
+						Nous pouvons également venir en duo accordéon / guitare, avec lequel nous proposons également un <a href="{{ path('manouche') }}">répertoire jazz manouche</a>. Dans le cadre de votre soirée guinguette, nous mixons alors les différents répertoires : de la valse swing à la chanson française (Brel, Aznavour, ... en versions instrumentales) en passant par le swing des années 30, vos invités seront conquis à coup sûr !
+					</p>
 				</div>
 
 				<div class="col-md-4">
-					<img src="{{ asset('img/videos-pic.jpg') }}" alt="Jérémy DUTHEIL, accordéoniste, en concert" class="img-fluid page-section__img">
+					<img src="{{ asset('img/accordeoniste_soiree.JPG') }}" alt="Jérémy DUTHEIL, accordéoniste, pour une soirée guinguette" class="img-fluid page-section__img">
 				</div>
 				<!-- /.col-sm-4 -->
 			</div>
@@ -58,9 +62,9 @@
 
             <div class="row">
                 <div class="col-md-6">
-                    <div class="embed-responsive embed-responsive-16by9">
-                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/VVWMhc7LNcM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    </div>
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/2ikPP4jTAfE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
                 </div>
 
                 <div class="col-md-6">
@@ -68,6 +72,18 @@
                         <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/k9SY8saaY3I" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                 </div>
+
+				<div class="col-md-6" style="margin-top: 15px;">
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/BGGrRG-q4VU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+				</div>
+
+				<div class="col-md-6" style="margin-top: 15px;">
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/CWUY-repj8g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+				</div>
             </div>
         </div>
     </section>
