--- a/templates/pages/manouche.html.twig
+++ b/templates/pages/manouche.html.twig
@@ -32,7 +32,7 @@
 				Nous nous produisons aussi bien lors de concerts en public, que lors d'<strong>événements d'entreprise et soirées privées</strong> ; les vidéos que vous verrez ci-dessous sont captées pour la plupart lors de concerts, mais vous pouvez consulter <a href="#reviews">nos avis</a> qui eux parlent plutôt de nos animations musicales.
 			</p>
 
-			<div class="row">
+			<!--<div class="row">
 				<div class="col-md-6" style="margin-bottom: 15px;">
 					<div class="embed-responsive embed-responsive-16by9">
 						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/BGGrRG-q4VU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -56,43 +56,59 @@
 						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/NIvIUJcluU0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</div>
 				</div>
-			</div>
+			</div>-->
 
 			<p>
 				Vous trouverez ci-dessous des informations sur nos prestations en tant qu'orchestre jazz manouche. Pour tout renseignement complémentaire, ou pour établir un devis, n'hésitez pas à <a href="{{ path('contact') }}">nous contacter</a>.
 			</p>
 
-			<p>
+			<!--<p>
 				Enfin, les premiers paragraphes que vous pouvez lire sur cette page sont des informations d'ordre général sur votre événement et le style musical jazz manouche ; pour nous entendre / voir directement, et avoir une idée de ce que nous proposons, vous pouvez cliquer sur le bouton ci-dessous :
 			</p>
 
 			<p>
 				<a href="#formules" class="btn btn-primary">Voir nos formules jazz manouche</a>.
-			</p>
+			</p>-->
 
 			<h2 class="section-title section-title--small">Votre événement</h2>
 
-			<p>
-				L'organisation d'un événement n'est jamais chose facile, d'autant que le temps manque souvent. Régler les derniers préparatifs d'un mariage, s'assurer d'une soirée d'entreprise réussie, définir le thème d'une soirée privée... Autant d'éléments stressants qu'il vous faut gérer, et qui s'avèrent parfois compliqués.
-			</p>
+			<div class="row">
+				<div class="col-md-6">
+					<p>
+						L'organisation d'un événement n'est jamais chose facile, d'autant que le temps manque souvent. Régler les derniers préparatifs d'un mariage, s'assurer d'une soirée d'entreprise réussie, définir le thème d'une soirée privée... Autant d'éléments stressants qu'il vous faut gérer, et qui s'avèrent parfois compliqués.
+					</p>
 
-			<p>
-				Trouver un <a href="{{ path('musiciens_soirees') }}">groupe de musique</a> peut se révéler une tâche chronophage ; à l'heure d'internet, les propositions sont nombreuses et il est difficile de faire un choix. En tant que professionnels expérimentés, notre but est de vous <strong>faciliter</strong> toutes ces démarches ; nous pouvons prendre en charge l'animation musicale de votre soirée de A à Z. Nous vous proposons ici différentes formules types (toutes avec un <a href="{{ path('accordeon_jazz_manouche') }}">accordéoniste jazz manouche</a> bien sûr !), que vous pouvez modifier à votre guise pour créer votre <strong>orchestre jazz manouche</strong> sur mesure. Bien entendu, nous vous conseillerons en fonction du lieu que vous avez choisi, du nombre de personnes attendues à votre événement et de votre budget.
-			</p>
+					<p>
+						Trouver un <a href="{{ path('musiciens_soirees') }}">groupe de musique</a> peut se révéler une tâche chronophage ; à l'heure d'internet, les propositions sont nombreuses et il est difficile de faire un choix. En tant que professionnels expérimentés, notre but est de vous <strong>faciliter</strong> toutes ces démarches ; nous pouvons prendre en charge l'animation musicale de votre soirée de A à Z. Nous vous proposons ici différentes formules types (toutes avec un <a href="{{ path('accordeon_jazz_manouche') }}">accordéoniste jazz manouche</a> bien sûr !), que vous pouvez modifier à votre guise pour créer votre <strong>orchestre jazz manouche</strong> sur mesure. Bien entendu, nous vous conseillerons en fonction du lieu que vous avez choisi, du nombre de personnes attendues à votre événement et de votre budget.
+					</p>
 
-			<p>
-				Autonomes en matériel de sonorisation, notre <strong>groupe de jazz manouche</strong> prend également en charge la totalité de l'aspect technique ; vous n'avez plus qu'à apprécier votre soirée en profitant d'une musique d'ambiance chic et élégante.
-			</p>
+					<p>
+						Autonomes en matériel de sonorisation, notre <strong>groupe de jazz manouche</strong> prend également en charge la totalité de l'aspect technique ; vous n'avez plus qu'à apprécier votre soirée en profitant d'une musique d'ambiance chic et élégante.
+					</p>
+				</div>
+
+				<div class="col-md-6">
+					<img class="img-fluid" src="img/crillon.jpg" alt="Trio jazz manouche à l'Hôtel Le Crillon">
+				</div>
+			</div>
 
 			<h2 class="section-title section-title--small">Le jazz manouche</h2>
 
-			<p>
-				Retrouvez l'ambiance des années 30 lors de votre soirée avec notre <strong>orchestre jazz manouche</strong>, au son des standards du style popularisé par Django Reinhardt et Stéphane Grappelli. La guitare se fait tantôt rythmique, tantôt soliste, la contrebasse enchaîne les <i>walking bass</i>, l'accordéon s'envole par moments.. Le jazz manouche, musique virtuose s'il en est, apportera à votre réception une touche <i>vintage</i>, mais surtout très chic.
-			</p>
+			<div class="row">
+				<div class="col-md-6">
+					<img class="img-fluid" src="img/swingcocktail2.png" alt="Trio jazz avec chanteur pour vos événements">
+				</div>
 
-			<p>
-				Vous avez forcément déjà entendu des morceaux comme <i>Minor Swing</i> ou <i>Les Yeux Noirs</i> ; intemporels, ils sont repris encore aujourd'hui dans presque tous les concerts de <strong>jazz manouche</strong>. Mais connaissez-vous des airs moins entendus, comme <i>Anniversary Song</i> ou <i>Lulu Swing</i> ? Notre répertoire balaie le style jazz manouche, des grands standards aux morceaux plus traditionnels et moins connus ; nous faisons également quelques incursions dans le jazz plus "classique", avec par exemple des reprises de Charlie Parker (<i>Billie's Bounce</i>, <i>Donna Lee</i>) ou Duke Ellington (<i>It don't mean a thing</i>, <i>Caravan</i>).
-			</p>
+				<div class="col-md-6">
+					<p>
+						Retrouvez l'ambiance des années 30 lors de votre soirée avec notre <strong>orchestre jazz manouche</strong>, au son des standards du style popularisé par Django Reinhardt et Stéphane Grappelli. La guitare se fait tantôt rythmique, tantôt soliste, la contrebasse enchaîne les <i>walking bass</i>, l'accordéon s'envole par moments.. Le jazz manouche, musique virtuose s'il en est, apportera à votre réception une touche <i>vintage</i>, mais surtout très chic.
+					</p>
+
+					<p>
+						Vous avez forcément déjà entendu des morceaux comme <i>Minor Swing</i> ou <i>Les Yeux Noirs</i> ; intemporels, ils sont repris encore aujourd'hui dans presque tous les concerts de <strong>jazz manouche</strong>. Mais connaissez-vous des airs moins entendus, comme <i>Anniversary Song</i> ou <i>Lulu Swing</i> ? Notre répertoire balaie le style jazz manouche, des grands standards aux morceaux plus traditionnels et moins connus ; nous faisons également quelques incursions dans le jazz plus "classique", avec par exemple des reprises de Charlie Parker (<i>Billie's Bounce</i>, <i>Donna Lee</i>) ou Duke Ellington (<i>It don't mean a thing</i>, <i>Caravan</i>).
+					</p>
+				</div>
+			</div>
 
 			<h2 id="reviews" class="section-title section-title--small">Ils nous ont fait confiance</h2>
 
@@ -104,7 +120,11 @@
 				<img src="{{ asset('img/greatweddings.jpeg') }}" alt="Great Weddings in France" style="max-height: 60px; margin-right: 25px;">
 				<img src="{{ asset('img/bistrochamps.png') }}" alt="Le Bistro des Champs" style="max-height: 60px; margin-right: 25px;">
 				<img src="{{ asset('img/lamarlotte.png') }}" alt="La Marlotte" style="max-height: 60px; margin-right: 25px;">
+				<img src="{{ asset('img/venteprivee.png') }}" alt="vente-privee.com" style="max-height: 100px; margin-right: 25px;">
+				<img src="{{ asset('img/crillonlogo.png') }}" alt="Hôtel Le Crillon" style="max-height: 60px; margin-right: 25px;">
 			</div>
+
+			<hr>
 
 			<script src="https://apps.elfsight.com/p/platform.js" defer></script>
 			<div class="elfsight-app-ec309407-5635-4d34-a076-6f44bf20acc8 reviews"></div>
@@ -117,17 +137,25 @@
 
             <h3 class="section-title section-title--smaller">Duo jazz manouche (accordéon / guitare) - Jérémy Dutheil & Solal Poux</h3>
 
-			<p>
-				Le duo jazz manouche est la formule intimiste par excellence ! L'accordéon et la guitare étant tous deux des instruments rythmiques et solistes, vous avez ici l'essence du jazz manouche sans aucun superflu. Les rôles s'alternent au sein des morceaux, et les solos s'enchaînent avec une grande dynamique.
-			</p>
+			<div class="row">
+				<div class="col-md-6">
+					<p>
+						Le duo jazz manouche est la formule intimiste par excellence ! L'accordéon et la guitare étant tous deux des instruments rythmiques et solistes, vous avez ici l'essence du jazz manouche sans aucun superflu. Les rôles s'alternent au sein des morceaux, et les solos s'enchaînent avec une grande dynamique.
+					</p>
 
-			<p>
-				Acoustique ou sonorisé, les conditions techniques sont réduites au minimum ; plus facile à accueillir qu'un <strong>orchestre jazz manouche</strong>, notre duo trouvera très facilement sa place dans les plus petits lieux. L'ambiance musicale de votre soirée n'en restera pas moins très classe et élégante, alternant les balades langoureuses et les morceaux virtuoses.
-			</p>
+					<p>
+						Acoustique ou sonorisé, les conditions techniques sont réduites au minimum ; plus facile à accueillir qu'un <strong>orchestre jazz manouche</strong>, notre duo trouvera très facilement sa place dans les plus petits lieux. L'ambiance musicale de votre soirée n'en restera pas moins très classe et élégante, alternant les balades langoureuses et les morceaux virtuoses.
+					</p>
 
-			<p>
-				Habitués à jouer ensemble, nous proposons avec Solal Poux un répertoire très vaste, qui emprunte notamment à la chanson française et au jazz plus "traditionnel". Nous nous produisons aussi bien lors d'événements privés (cocktails, mariages, ..) que publics (festivals, salles, ..).
-			</p>
+					<p>
+						Habitués à jouer ensemble, nous proposons avec Solal Poux un répertoire très vaste, qui emprunte notamment à la chanson française et au jazz plus "traditionnel". Nous nous produisons aussi bien lors d'événements privés (cocktails, mariages, ..) que publics (festivals, salles, ..).
+					</p>
+				</div>
+
+				<div class="col-md-6">
+					<img src="img/manouchebg.jpg" alt="Jérémy Dutheil & Solal Poux" class="img-fluid">
+				</div>
+			</div>
 
 			<div class="row">
 				<div class="col-md-6" style="margin-bottom: 15px;">
