--- a/templates/pages/groupe_jazz_manouche_mariage_paris.html.twig
+++ b/templates/pages/groupe_jazz_manouche_mariage_paris.html.twig
@@ -11,39 +11,49 @@
 {% block body %}
 	<section class="flash flash--limited">
 		<div class="flash-item">
-			<img src="img/trio-jazz-manouche.jpg" alt="Groupe de jazz manouche pour mariage" class="flash-item__background" style="top: -50%;">
+			<img src="img/manouchebg.jpg" alt="Groupe de jazz manouche pour mariage" class="flash-item__background" style="top: -50%;">
 		</div>
 	</section>
 
-	<section class="flash-ghost flash-ghost--limited flash-ghost--superlimited"></section>
+	<section class="flash-ghost flash-ghost--limited"></section>
 
 	<section class="content-section bg--blank page-section">
 		<div class="container bg--blank">
 			<h1 class="section-title">Groupe jazz manouche pour votre mariage</h1>
 
+			<!--
 			<div class="embed-responsive embed-responsive-16by9" style="margin-bottom: 15px;">
 				<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/NIvIUJcluU0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			</div>
+			-->
 
-            <p>
-                Vous préparez votre mariage (ou l'organisez pour des clients), et vous cherchez un <strong><a href="{{ path('manouche') }}">groupe de jazz manouche</a></strong> pour animer celui-ci en musique ? Du vin d'honneur au repas, découvrez nos formules qui raviront à coup sûr vos invités !
-			</p>
+			<div class="row">
+				<div class="col-md-6">
+					<p>
+						Vous préparez votre mariage (ou l'organisez pour des clients), et vous cherchez un <strong><a href="{{ path('manouche') }}">groupe de jazz manouche</a></strong> pour animer celui-ci en musique ? Du vin d'honneur au repas, découvrez nos formules qui raviront à coup sûr vos invités !
+					</p>
 
-            <p>
-                Un mariage est un événement particulièrement important dans la vie d'un couple ; vous souhaitez faire de cette soirée un moment inoubliable. Le choix de l'ambiance musicale est essentiel, car elle accompagnera vos invités du vin d'honneur au repas, ou peut-être même pendant la cérémonie.
-            </p>
+					<p>
+						Un mariage est un événement particulièrement important dans la vie d'un couple ; vous souhaitez faire de cette soirée un moment inoubliable. Le choix de l'ambiance musicale est essentiel, car elle accompagnera vos invités du vin d'honneur au repas, ou peut-être même pendant la cérémonie.
+					</p>
 
-			<p>
-				Retrouvez l'ambiance des années 30 lors de votre soirée avec notre groupe de musiciens professionnels, au son des standards du style popularisé par Django Reinhardt. La guitare se fait tantôt rythmique, tantôt soliste, la contrebasse enchaîne les <i>walking bass</i>, l'accordéon s'envole par moments.. Le jazz manouche, musique virtuose s'il en est, apportera à votre réception une touche <i>vintage</i>, mais surtout très chic.
-			</p>
+					<p>
+						Retrouvez l'ambiance des années 30 lors de votre soirée avec notre groupe de musiciens professionnels, au son des standards du style popularisé par Django Reinhardt. La guitare se fait tantôt rythmique, tantôt soliste, la contrebasse enchaîne les <i>walking bass</i>, l'accordéon s'envole par moments.. Le jazz manouche, musique virtuose s'il en est, apportera à votre réception une touche <i>vintage</i>, mais surtout très chic.
+					</p>
 
-			<p>
-				Afin de s'adapter au mieux à vos envies et votre budget, nous proposons <strong>différentes formules</strong> de groupe jazz manouche pour votre mariage, à partir du duo (voir ci-dessous) ; nous sommes également complètement autonomes en matériel de sonorisation. Nous nous occupons de tout, vous n'avez plus qu'à apprécier !
-			</p>
+					<p>
+						Afin de s'adapter au mieux à vos envies et votre budget, nous proposons <strong>différentes formules</strong> de groupe jazz manouche pour votre mariage, à partir du duo (voir ci-dessous) ; nous sommes également complètement autonomes en matériel de sonorisation. Nous nous occupons de tout, vous n'avez plus qu'à apprécier !
+					</p>
+				</div>
 
-			<p>
-				N'hésitez plus et contactez-nous pour plus d'informations.
-			</p>
+				<div class="col-md-6">
+					<img class="img-fluid" src="img/manouchebg.jpg" alt="Groupe jazz manouche avec accordéon">
+
+					<p>
+						<a href="{{ path('contact') }}" class="btn btn-primary" style="margin-top: 15px;">Contactez nous !</a>
+					</p>
+				</div>
+			</div>
 
             <h2 class="section-title section-title--small">Duo jazz manouche pour votre mariage</h2>
 
@@ -59,26 +69,44 @@
                 Pour votre mariage, nous assurons la musique d'ambiance pendant le vin d'honneur ou lors du repas ; les prestations que nous proposons durent en moyenne 3h, mais nous pouvons bien sûr discuter des horaires en amont. N'hésitez pas à nous demander à l'avance des morceaux spécifiques que vous aimeriez entendre, afin que nous les préparions pour le jour J !
             </p>
 
-            <div class="row">
-				<div class="col-md-6">
+			<div class="row">
+				<div class="col-md-6" style="margin-bottom: 15px;">
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/BGGrRG-q4VU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+				</div>
+
+				<div class="col-md-6" style="margin-bottom: 15px;">
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/CWUY-repj8g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+				</div>
+
+				<div class="col-md-6" style="margin-bottom: 15px;">
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/u8re-Ba8RQ0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+				</div>
+
+				<div class="col-md-6" style="margin-bottom: 15px;">
 					<div class="embed-responsive embed-responsive-16by9">
 						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/W_uOwoGcBuE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</div>
 
-					<p class="text-center" style="margin-top: 15px;">
-						Ici avec notre propre arrangement de <i>La Foule</i>, célèbre morceau d'<strong>Edith Piaf</strong> ; nous avons choisi de l'interpréter dans une version douce et intimiste, pour un moment relaxant..
-						<br><a href="https://www.youtube.com/watch?v=W_uOwoGcBuE" target="_blank">https://www.youtube.com/watch?v=W_uOwoGcBuE</a>
-					</p>
 				</div>
 
-				<div class="col-md-6">
+				<div class="col-md-6" style="margin-bottom: 15px;">
 					<div class="embed-responsive embed-responsive-16by9">
 						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/Iklby0R-WyQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</div>
 
-					<p class="text-center" style="margin-top: 15px;">
-						Un grand classique parmi les standards jazz : <i>Sunny Side of the Street</i> !
-					</p>
+
+				</div>
+
+				<div class="col-md-6" style="margin-bottom: 15px;">
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/9b6zyj1e2cE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
 				</div>
 			</div>
 
