--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -65,7 +65,7 @@
              "@context" : "http://schema.org",
              "@type" : "Organization",
              "name" : "Jérémy Dutheil",
-             "url" : "http://www.jeremy-dutheil.fr",
+             "url" : "https://www.jeremy-dutheil.fr",
              "sameAs" : [
                "https://www.facebook.com/jeremydutheilaccordeoniste/",
               ],
