--- a/templates/pages/musiciens_soirees.html.twig
+++ b/templates/pages/musiciens_soirees.html.twig
@@ -11,7 +11,7 @@
 {% block body %}
 	<section class="flash flash--limited">
 		<div class="flash-item">
-			<img src="img/trio-jazz-manouche.jpg" alt="Trio jazz manouche - Accordéon, Guitare, Contrebasse" class="flash-item__background flash-item__background--groupes" style="top: -50%;">
+			<img src="img/manouchebg.jpg" alt="Trio jazz manouche - Accordéon, Guitare, Contrebasse" class="flash-item__background flash-item__background--groupes" style="top: -50%;">
 		</div>
 	</section>
 
@@ -21,33 +21,65 @@
 		<div class="container">
 			<h1 class="section-title">Musiciens pour soirées et événements</h1>
 
-            <p>
-                Vous cherchez un groupe de musique pour prendre en charge l'<strong>animation musicale</strong> de votre cocktail, fête ou soirée d'entreprise ? Artistes professionnels, nous vous proposons des formules sur mesure en fonction de vos envies et votre budget. Autonomes en matériel (une simple prise électrique nous suffit), vous n'avez plus qu'à apprécier la <strong>musique en live</strong>, avec de vrais musiciens sur scène !
-            </p>
+			<div class="row">
+				<div class="col-md-6">
+					<p>
+						Vous cherchez un groupe de musique pour prendre en charge l'<strong>animation musicale</strong> de votre cocktail, fête entre amis ou soirée d'entreprise ? Artistes professionnels, nous vous proposons des formules sur mesure en fonction de vos envies et votre budget. Autonomes en matériel (une simple prise électrique nous suffit), vous n'avez plus qu'à apprécier la <strong>musique en live</strong>, avec de vrais musiciens sur scène !
+					</p>
 
-			<p>
-				Destinées à tout type de public, ces formules s'adressent aussi bien aux <em>particuliers</em> qu'aux <em>professionnels</em> ; grâce aux qualités acoustique de l'accordéon (et des autres instruments), les conditions techniques sont réduites au minimum. En effet, la plupart du temps, la sonorisation n'est pas nécessaire. Pour de plus grands espaces, pas d'inquiétude : Jérémy Dutheil (et ses musiciens) sont <strong>autonomes</strong> et installeront un système de diffusion adapté à votre lieu.
-			</p>
+					<p>
+						Destinées à tout type de public, ces formules s'adressent aussi bien aux <em>particuliers</em> qu'aux <em>professionnels</em> ; grâce aux qualités acoustique de l'accordéon (et des autres instruments), les conditions techniques sont réduites au minimum. En effet, la plupart du temps, la sonorisation n'est pas nécessaire. Pour de plus grands espaces, pas d'inquiétude : nous sommes <strong>autonomes</strong> et nous installerons un système de diffusion adapté à votre lieu.
+					</p>
 
-            <p>
-                Retrouvez ci-dessous quelques exemples de prestations que nous pouvons vous proposer, classées par style musical. N'hésitez pas à nous contacter pour plus d'informations. Si vous cherchez plutôt un musicien en solo, vous pouvez consulter la page suivante : <a href="{{ path('accordeoniste_soiree' ) }}">accordéoniste pour l'animation musicale de votre soirée</a>.
-            </p>
+					<p>
+						Retrouvez ci-dessous quelques exemples de prestations que nous pouvons vous proposer, classées par style musical. N'hésitez pas à nous contacter pour plus d'informations. Si vous cherchez plutôt un musicien en solo, vous pouvez consulter la page suivante : <a href="{{ path('accordeoniste_soiree' ) }}">accordéoniste pour l'animation musicale de votre soirée</a>.
+					</p>
+				</div>
+
+				<div class="col-md-6">
+					<img class="img-fluid" src="img/champs.jpg" alt="">
+
+					<p style="margin-top: 15px;">
+						<a href="{{ path('contact') }}" class="btn btn-primary">Contactez nous !</a>
+					</p>
+				</div>
+			</div>
 
 			<h2 class="section-title section-title--small" style="margin-top: 15px;">Jazz manouche</h2>
 
-			<p>
-				Le jazz manouche, popularisé par Django Reinhardt et Stéphane Grappeli, est un style particulièrement demandé lors des soirées ; pour un vin d'honneur par exemple, vous proposerez alors à vos convives une musique d'ambiance très agréable, qui ajoutera un plus non négligeable à ce moment déjà extraordinaire. Dans le cadre d'une soirée d'entreprise (cocktail, inauguration, soirée CE...), c'est votre image de marque que vous promouverez, en ajoutant une musique classe et sans aucun doute associée au "luxe".
-			</p>
+			<div class="row">
+				<div class="col-md-6">
+					<img class="img-fluid" src="img/jdspnormal.jpg" alt="Jérémy Dutheil & Solal Poux - Duo Jazz Manouche">
 
-            <p>
-                Notre groupe de musiciens jazz manouche propose un répertoire axé autour des grands standards du style popularisé par Django Reinhardt : <i>Minor Swing, All of Me, Les Yeux Noirs, ...</i>. L'accordéon peut s'entourer d'une guitare, une contrebasse, mais également un violon ou des cuivres... selon vos envies ! De 2 à 4h de musique, acoustique ou sonorisé ; nous sommes bien évidemment tous <strong>musiciens professionnels</strong>, et possédons une grande expérience scénique et sur nos instruments respectifs.
-            </p>
+					<p style="margin-top: 15px;">
+						<a class="btn btn-primary" href="{{ path('manouche') }}">Plus d'informations <span class="d-none d-md-inline">sur le groupe jazz manouche</span></a>
+					</p>
+				</div>
 
-			<p>
-				<a class="btn btn-primary" href="{{ path('manouche') }}">Plus d'informations <span class="d-none d-md-inline">sur le groupe jazz manouche</span></a>
-			</p>
+				<div class="col-md-6">
+					<p>
+						Le jazz manouche, popularisé par Django Reinhardt et Stéphane Grappeli, est un style particulièrement demandé lors des soirées ; pour un vin d'honneur par exemple, vous proposerez alors à vos convives une musique d'ambiance très agréable, qui ajoutera un plus non négligeable à ce moment déjà extraordinaire. Dans le cadre d'une soirée d'entreprise (cocktail, inauguration, soirée CE...), c'est votre image de marque que vous promouverez, en ajoutant une musique classe et sans aucun doute associée au "luxe".
+					</p>
+
+					<p>
+						Notre groupe de musiciens jazz manouche propose un répertoire axé autour des grands standards du style popularisé par Django Reinhardt : <i>Minor Swing, All of Me, Les Yeux Noirs, ...</i>. L'accordéon peut s'entourer d'une guitare, une contrebasse, mais également un violon ou des cuivres... selon vos envies ! De 2 à 4h de musique, acoustique ou sonorisé ; nous sommes bien évidemment tous <strong>musiciens professionnels</strong>, et possédons une grande expérience scénique et sur nos instruments respectifs.
+					</p>
+				</div>
+			</div>
 
             <div class="row">
+				<div class="col-md-6" style="margin-bottom: 15px;">
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/BGGrRG-q4VU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+				</div>
+
+				<div class="col-md-6" style="margin-bottom: 15px;">
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/CWUY-repj8g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+				</div>
+
 				<div class="col-md-6">
 					<div class="embed-responsive embed-responsive-16by9">
 						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/W_uOwoGcBuE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -61,11 +93,15 @@
 				</div>
 			</div>
 
-            <h2 class="section-title section-title--small" style="margin-top: 15px;">Chanson française</h2>
+            <h2 class="section-title section-title--small" style="margin-top: 15px;">Chanson française - Esprit guinguette</h2>
+
+			<p>
+				Aujourd'hui, la <strong>chanson française</strong> parle à toutes les générations, de 7 à 77 ans... Pas question ici de tomber dans le cliché "ringard" ! On replonge bien sûr dans les années 30, mais dans un esprit chic et raffiné.
+			</p>
 
             <p>
-                Nous proposons des duos accordéon / voix autour de la chanson française, en toute intimité ; de Piaf à Brel, en passant par Aznavour ou encore Odette Laure, il y en a pour tous les goûts... <br>
-				Le duo chanson française s'adapte parfaitement à des soirées conviviales, dans un style <i>rétro</i> ou classe ; les chansons jouées sont pour la plupart très connues, et vos invités pourront reprendre les refrains en coeur ! Musique d'ambiance, ou réelle animation de soirée sous forme de concert.. C'est vous qui décidez du style que vous préférez pour votre événement !
+                Nous proposons des animations musicales autour de la chanson française, à partir du <strong>duo (accordéon / voix)</strong> ; de Piaf à Brel, en passant par Aznavour ou encore Odette Laure, il y en a pour tous les goûts... <br>
+				Le style chanson française / guinguette s'adapte parfaitement à des soirées conviviales, dans un style <i>rétro</i> ou classe ; les chansons jouées sont pour la plupart très connues, et vos invités pourront reprendre les refrains en coeur ! Musique d'ambiance, ou réelle animation de soirée sous forme de concert.. C'est vous qui décidez du style que vous préférez pour votre événement !
             </p>
 
             <div class="row">
@@ -88,7 +124,11 @@
 			<h2 class="section-title section-title--small" style="margin-top: 15px;">Orchestre sur mesure</h2>
 
 			<p>
-				Sur cette page, et sur la page <a href="{{ path('animations') }}">dédiée aux animations musicales</a>, nous vous proposons des formations et répertoires à titre d'exemple. Rien n'est figé, et toutes nos prestations musicales se font <strong>sur mesure</strong>. Nous pouvons par exemple venir en trio autour de la chanson française, avec une chanteuse, un accordéoniste et un guitariste. Selon votre budget, ces formules peuvent encore s'enrichir d'autres instrumentistes, menant à des groupes de musiciens plus complets. N'hésitez pas à nous contacter pour en discuter !
+				Sur cette page, et sur la page <a href="{{ path('animations') }}">dédiée aux animations musicales</a>, nous vous proposons des formations et répertoires à titre d'exemple. Rien n'est figé, et toutes nos prestations musicales se font <strong>sur mesure</strong>. Nous pouvons par exemple venir en trio autour de la chanson française, avec une chanteuse, un accordéoniste et un guitariste. Selon votre budget, ces formules peuvent encore s'enrichir d'autres instrumentistes, menant à des groupes de musiciens plus complets. N'hésitez pas à <a href="{{ path('contact') }}">nous contacter</a> pour en discuter !
+			</p>
+
+			<p>
+				Je travaille également avec de nombreux musiciens professionnels, qui peuvent vous proposer d'autres styles musicaux : groupe de <strong>soul / funk</strong>, ambiance <strong>pop / folk</strong>, jazz plus traditionnel... Ces différents groupes de musique sauront s'adapter à <strong>tout type de soirée</strong>, n'hésitez pas à m'envoyer un message pour vous guider dans vos recherches !
 			</p>
         </div>
 		<!-- /.container -->
