agenda link color

--- a/templates/pages/agenda.html.twig
+++ b/templates/pages/agenda.html.twig
@@ -9,6 +9,14 @@
 {% endblock %}
 
 {% block body %}
+	<style type="text/css">
+		.bit-venue {
+			color: #555555 !important;
+		}
+
+		.bit-rsvp { display: none !important; }
+	</style>
+
 	<section class="flash flash--limited">
 		<div class="flash-item">
 			<img src="img/manouchebg.jpg" alt="Un groupe de jazz manouche pour vos événements - Avec accordéon" class="flash-item__background" style="top: -50%;">
